--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,14 @@
 logging:
   level:
     org.springframework.security: trace
+
+spring:
+  datasource:
+    url: jdbc:mariadb://locahost:3306/oauth2db
+    username: root
+    password: jvman19
+    driver-class-name: org.mariadb.jdbc.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
